# gst-demo-plugins

./: README.md  meson.build
videoeffects/: meson.build
videoeffects/src/: gst-plugin.c  gstneovideoconv.c  gstneovideoconv.h
webrtc/: meson.build
webrtc/src/: gst-plugin.c  gstwhipsink.c  gstwhipsink.h
